--- a/etc/tuhrthul_kau.glade
+++ b/etc/tuhrthul_kau.glade
@@ -4,6 +4,7 @@
   <requires lib="gtk+" version="3.24"/>
   <object class="GtkWindow" id="main_window">
     <property name="can-focus">False</property>
+    <property name="icon">../share/icons/tuhrthul_kau.ico</property>
     <child>
       <object class="GtkBox" id="top_level_box">
         <property name="visible">True</property>
