--- a/etc/tuhrthul_kau.css
+++ b/etc/tuhrthul_kau.css
@@ -1,8 +1,10 @@
 .grid_background {
+  color: aqua;
   background-color: lightgrey;
 }
 
 .grid_header {
+  color: black;
   background-color: floralwhite;
   font-size: 20px;
 }
